--- a/quiz-style.css
+++ b/quiz-style.css
@@ -40,7 +40,7 @@ h1 {
 	margin: 0.2em;
 }
 
-.game-div:hover {
+.notouch .game-div:hover {
 	border-style: dotted;
 	background-color: wheat;
 	cursor: default;
@@ -78,7 +78,7 @@ h1 {
 	height: 3em;
 	margin: 0.1em;
 }
-.answer-div:hover {
+.notouch .answer-div:hover {
 	border-style: dotted;
 	background-color: wheat;
 	cursor: default;
